# AutoGL

./: .gitmodules  CMakeLists.txt  README.MD  error.sh  run.sh
AutoGL/: .gitmodules  CMakeLists.txt  dp.sh
AutoGL/AutoGL/: Makefile  cmake_install.cmake
AutoGL/glad/include/glad/: glad.h
AutoGL/gui/: CMakeLists.txt  GuiApp.cpp  GuiApp.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp  WebViewLayer.cpp  WebViewLayer.hpp  main.cpp
AutoGL/gui/panels/: Panel.hpp  PanelManager.hpp  Sidebar.hpp  TerminalPanel.hpp  TreeView.hpp
AutoGL/gui/ui/: bundle.js  bundle.js.map  index.html
AutoGL/gui/ui/js/: main.js  main.tmp.js
AutoGL/gui/ui/js/panels/: sidebar.js  treeview.js
AutoGL/include/AutoGL/: AutoGL.hpp  Log.hpp
AutoGL/src/: autogl.cpp  autogl_internal.hpp  engine_backend.hpp  gl_engine.cpp  gl_engine.hpp  gl_shader_common.cpp  gl_shader_common.hpp  gl_shader_compute.cpp  gl_shader_compute.hpp  gl_shader_fragment.cpp  gl_shader_fragment.hpp  gl_shader_vertex.cpp  gl_shader_vertex.hpp  glsl_loader.cpp  glsl_loader.hpp  glsl_types.hpp  log.cpp  main.cpp  shader_regex.cpp  shader_regex.hpp  vk_engine.cpp  vk_engine.hpp
docs/: learn.md
glad/src/: glad.c
shader/: basic.glsl  compute.glsl  smoke.glsl  test.glsl  uniform.glsl
src/: main.cpp
